--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section class="content">
     <h1>Pokedex</h1>
 
-    <ol class="pokemons">
+    <ol id="pokemonList" class="pokemons">
         <li class="pokemon">
             <span class="number">#001</span>
             <span class="name">bulbasaur</span>
