--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </li>
     </ol>       
   </section>
-    <!-- Our JavaScript-->
-    <script src="/assets/js/app.js"></script>
+  <!-- Our JavaScript-->
+  <script src="/assets/js/poke-api.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
