--- a/index.html
+++ b/index.html
@@ -20,21 +20,17 @@
     <h1>Pokedex</h1>
 
     <ol id="pokemonList" class="pokemons">
-        <li class="pokemon">
-            <span class="number">#001</span>
-            <span class="name">bulbasaur</span>
-            
-            <div class="detail">
-                <ol class="types">
-                    <li class="type">grass</li>
-                    <li class="type">poison</li>
-                </ol>
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="bulbasaur">
-            </div>
-        </li>
-    </ol>       
+      
+    </ol>  
+    <div class="pagination">
+        <button id="loadMoreButton" type="button">
+            Load more
+        </button> 
+    </div>    
   </section>
   <!-- Our JavaScript-->
+
+  <script src="/assets/js/pokemon-model.js"></script>
   <script src="/assets/js/poke-api.js"></script>
   <script src="/assets/js/main.js"></script>
 </body>
